# static/swagger/doc.json
@@ -1,285 +1,338 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "title": "Backe End Developer ",
-      "description": "This is an API for DevAPI (GO+PostgreSQL)",
-      "contact": {
-        "name": "Nizar Developer",
-        "url": "https://nizar.id/",
-        "email": "nizar.aplikasi@gmail.com"
-      },
-      "version": "1.0"
+  "swagger": "2.0",
+  "info": {
+    "title": "Backend Go API",
+    "description": "This is an API for DevAPI (GO+PostgreSQL)",
+    "contact": {
+      "name": "Nizar Developer",
+      "url": "https://nizar.id/",
+      "email": "nizar.aplikasi@gmail.com"
     },
-    "host": "",
-    "basePath": "/api/v1",
-    "schemes": [],
-    "paths": {
-      "/auth/signin": {
-        "post": {
-          "description": "Signin with username and password",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["auth"],
-          "summary": "Signin",
-          "parameters": [
-            {
-              "description": "dto",
-              "name": "dto",
-              "in": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/dtos.UserLoginDto"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
+    "version": "1.0"
+  },
+  "host": "",
+  "basePath": "/api/v1",
+  "schemes": [],
+  "paths": {
+    "/auth/signin": {
+      "post": {
+        "description": "Signin with username and password",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["auth"],
+        "summary": "Signin",
+        "parameters": [
+          {
+            "description": "Login payload with Base64 encoded username:password",
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dtos.LoginFormRequestDto"
             }
           }
-        }
-      },
-      "/auth/refresh": {
-        "post": {
-          "security": [{ "ApiKeyAuth": [] }],
-          "description": "Refresh token",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["auth"],
-          "summary": "Refresh",
-          "parameters": [
-            {
-              "description": "dto",
-              "name": "dto",
-              "in": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/dtos.RefreshTokenDto"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
-            }
-          }
-        }
-      },
-      "/user": {
-        "post": {
-          "security": [{ "ApiKeyAuth": [] }],
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["user"],
-          "summary": "Create User",
-          "parameters": [
-            {
-              "description": "dto",
-              "name": "dto",
-              "in": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/dtos.AddUserDto"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
-            }
-          }
-        }
-      },
-      "/user/me": {
-        "get": {
-          "security": [{ "ApiKeyAuth": [] }],
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["user"],
-          "summary": "Get user info",
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
-            }
-          }
-        }
-      },
-      "/user/{id}": {
-        "delete": {
-          "security": [{ "ApiKeyAuth": [] }],
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["user"],
-          "summary": "Deactive User",
-          "parameters": [
-            {
-              "type": "string",
-              "description": "dto",
-              "name": "id",
-              "in": "path",
-              "required": true
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
-            }
-          }
-        }
-      },
-      "/user/change-password": {
-        "post": {
-          "security": [{ "ApiKeyAuth": [] }],
-          "description": "Change password",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["user"],
-          "summary": "Change password",
-          "parameters": [
-            {
-              "description": "dto",
-              "name": "dto",
-              "in": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/dtos.UserSigninDto"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
-            }
-          }
-        }
-      },
-      "/user/fetch": {
-        "get": {
-          "security": [{ "ApiKeyAuth": [] }],
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "tags": ["user"],
-          "summary": "Fetch user",
-          "parameters": [
-            {
-              "type": "string",
-              "name": "last_item",
-              "in": "query"
-            },
-            {
-              "type": "integer",
-              "default": 10,
-              "name": "length",
-              "in": "query"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "$ref": "#/definitions/dtos.ApiResponse"
-              }
-            }
-          }
-        }
-      }
-     
-    },
-    "definitions": {
-      "dtos.ApiResponse": {
-        "type": "object",
-        "properties": {
-          "data": {},
-          "message": {
-            "type": "string"
-          },
-          "success": {
-            "type": "boolean"
-          }
-        }
-      },
-      "dtos.UserLoginDto": {
-        "type": "object",
-        "properties": {
-          "login_form": {
-            "type": "string",
-            "format": "base64"
-          }
-        }
-      },
-      "dtos.UserSigninDto": {
-        "type": "object",
-        "properties": {
-          "password": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
-          }
-        }
-      },
-      "dtos.AddUserDto": {
-        "type": "object",
-        "required": [
-          "fullname",
-          "no_telp",
-          "password",
-          "role",
-          "username"
         ],
-        "properties": {
-          "fullname": {
-            "type": "string"
-          },
-          "no_telp": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string",
-            "minLength": 8
-          },
-          "role": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string",
-            "minLength": 2
-          }
-        }
-      },
-      "dtos.RefreshTokenDto": {
-        "type": "object",
-        "properties": {
-          "refresh_token": {
-            "type": "string"
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
           }
         }
       }
     },
-    "securityDefinitions": {
-      "ApiKeyAuth": {
-        "type": "apiKey",
-        "name": "Authorization",
-        "in": "header"
+    "/auth/refresh": {
+      "post": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "description": "Refresh token",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["auth"],
+        "summary": "Refresh",
+        "parameters": [
+          {
+            "description": "Refresh token DTO",
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dtos.RefreshTokenDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
+          }
+        }
+      }
+    },
+    "/user": {
+      "post": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["user"],
+        "summary": "Create User",
+        "parameters": [
+          {
+            "description": "New user data",
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dtos.AddUserDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
+          }
+        }
+      }
+    },
+    "/user/me": {
+      "get": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["user"],
+        "summary": "Get user info",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
+          }
+        }
+      }
+    },
+    "/user/list": {
+      "get": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["user"],
+        "summary": "List all users",
+        "description": "Get a list of all users in the system.",
+        "responses": {
+          "200": {
+            "description": "Successful user list",
+            "schema": {
+              "$ref": "#/definitions/dtos.UserListResponse"
+            }
+          }
+        }
+      }
+    },
+    "/user/{id}": {
+      "delete": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["user"],
+        "summary": "Deactivate User",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "User ID",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
+          }
+        }
+      }
+    },
+    "/user/change-password": {
+      "post": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "description": "Change password",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["user"],
+        "summary": "Change Password",
+        "parameters": [
+          {
+            "description": "Change password data",
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dtos.ChangePasswordDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
+          }
+        }
+      }
+    },
+    "/user/fetch": {
+      "get": {
+        "security": [{ "ApiKeyAuth": [] }],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["user"],
+        "summary": "Fetch users",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "last_item",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "default": 10,
+            "name": "length",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dtos.ApiResponse"
+            }
+          }
+        }
       }
     }
+  },
+  "definitions": {
+    "dtos.ApiResponse": {
+      "type": "object",
+      "properties": {
+        "data": {},
+        "message": {
+          "type": "string"
+        },
+        "success": {
+          "type": "boolean"
+        }
+      }
+    },
+    "dtos.LoginFormRequestDto": {
+      "type": "object",
+      "properties": {
+        "login_form": {
+          "type": "string",
+          "format": "base64"
+        }
+      }
+    },
+    "dtos.ChangePasswordDto": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "dtos.AddUserDto": {
+      "type": "object",
+      "required": [
+        "username",
+        "password",
+        "fullname",
+        "notelp",
+        "orgname",
+        "role"        
+      ],
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string",
+          "minLength": 8
+        },
+        "fullname": {
+          "type": "string"         
+        },
+        "notelp": {
+          "type": "string"         
+        },
+        "orgname": {
+          "type": "string"          
+        },
+        "role": {
+          "type": "string"
+        }        
+      }
+    },
+    "dtos.RefreshTokenDto": {
+      "type": "object",
+      "properties": {
+        "refresh_token": {
+          "type": "string"
+        }
+      }
+    },
+    "dtos.UserListResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "message": {
+          "type": "string"
+        },
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/dtos.UserItem"
+          }
+        }
+      }
+    },
+    "dtos.UserItem": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "fullname": {
+          "type": "string"
+        },
+        "orgname": {
+          "type": "string"
+        },
+        "role": {
+          "type": "string"
+        }
+      }
+    }
+  },
+  "securityDefinitions": {
+    "ApiKeyAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
   }
-  
+}
